--- a/templates/actor/parts/actor-status.hbs
+++ b/templates/actor/parts/actor-status.hbs
@@ -3,7 +3,7 @@
 	<table>
 		<tr class="skill-row">
 			<td class="skill-special skill-cell">
-			<label class="rollable" data-roll="d20-{{system.hunger.value}}-{{system.dehydration.value}}-{{system.exhaustion.value}}-{{system.lvl_radiation.value}}+{{system.barter.value}}+@abilities.cha.mod">CHA</label>
+			<label class="rollable" data-roll="d20-{{system.penalties.value}}+{{system.barter.value}}+@abilities.cha.mod">CHA</label>
 			</td>
 			<td class="skill-cell skill-label">Barter</td>
 			<td class="skill-cell skill-value"><input type="number"  name="system.barter.value" value="{{system.barter.value}}" /></td>
@@ -11,8 +11,8 @@
 
 		<tr class="skill-row">
 			<td class="skill-special skill-cell">
-			<label class="rollable" data-roll="d20-{{system.hunger.value}}-{{system.dehydration.value}}-{{system.exhaustion.value}}-{{system.lvl_radiation.value}}+{{system.breach.value}}+@abilities.per.mod">PER</label> / 
-			<label class="rollable" data-roll="d20-{{system.hunger.value}}-{{system.dehydration.value}}-{{system.exhaustion.value}}-{{system.lvl_radiation.value}}+{{system.breach.value}}+@abilities.int.mod">INT</label>
+			<label class="rollable" data-roll="d20-{{system.penalties.value}}+{{system.breach.value}}+@abilities.per.mod">PER</label> / 
+			<label class="rollable" data-roll="d20-{{system.penalties.value}}+{{system.breach.value}}+@abilities.int.mod">INT</label>
 			</td>
 			<td class="skill-cell skill-label">Breach</td>
 			<td class="skill-cell skill-value"><input type="number"  name="system.breach.value" value="{{system.breach.value}}" /></td>
@@ -20,7 +20,7 @@
 
 		<tr class="skill-row">
 			<td class="skill-special skill-cell">
-			<label class="rollable" data-roll="d20-{{system.hunger.value}}-{{system.dehydration.value}}-{{system.exhaustion.value}}-{{system.lvl_radiation.value}}+{{system.crafting.value}}+@abilities.int.mod">INT</label>
+			<label class="rollable" data-roll="d20-{{system.penalties.value}}+{{system.crafting.value}}+@abilities.int.mod">INT</label>
 			</td>
 			<td class="skill-cell skill-label">Crafting</td>
 			<td class="skill-cell skill-value"><input type="number"  name="system.crafting.value" value="{{system.crafting.value}}" /></td>
@@ -28,7 +28,7 @@
 		
 			<tr class="skill-row">
 			<td class="skill-special skill-cell">
-			<label class="rollable" data-roll="d20-{{system.hunger.value}}-{{system.dehydration.value}}-{{system.exhaustion.value}}-{{system.lvl_radiation.value}}+{{system.energy_weapons.value}}+@abilities.per.mod">PER</label>
+			<label class="rollable" data-roll="d20-{{system.penalties.value}}+{{system.energy_weapons.value}}+@abilities.per.mod">PER</label>
 			</td>
 			<td class="skill-cell skill-label">Energy Weapons</td>
 			<td class="skill-cell skill-value"><input type="number"  name="system.energy_weapons.value" value="{{system.energy_weapons.value}}" /></td>
@@ -36,7 +36,7 @@
 		
 			<tr class="skill-row">
 			<td class="skill-special skill-cell">
-			<label class="rollable" data-roll="d20-{{system.hunger.value}}-{{system.dehydration.value}}-{{system.exhaustion.value}}-{{system.lvl_radiation.value}}+{{system.explosives.value}}+@abilities.per.mod">PER</label>
+			<label class="rollable" data-roll="d20-{{system.penalties.value}}+{{system.explosives.value}}+@abilities.per.mod">PER</label>
 			</td>
 			<td class="skill-cell skill-label">Explosives</td>
 			<td class="skill-cell skill-value"><input type="number"  name="system.explosives.value" value="{{system.explosives.value}}" /></td>
@@ -44,7 +44,7 @@
 
 		<tr class="skill-row">
 			<td class="skill-special skill-cell">
-			<label class="rollable" data-roll="d20-{{system.hunger.value}}-{{system.dehydration.value}}-{{system.exhaustion.value}}-{{system.lvl_radiation.value}}+{{system.guns.value}}+@abilities.agi.mod">AGI</label>
+			<label class="rollable" data-roll="d20-{{system.penalties.value}}+{{system.guns.value}}+@abilities.agi.mod">AGI</label>
 			</td>
 			<td class="skill-cell skill-label">Guns</td>
 			<td class="skill-cell skill-value"><input type="number"  name="system.guns.value" value="{{system.guns.value}}" /></td>
@@ -52,8 +52,8 @@
 		
 		<tr class="skill-row">
 			<td class="skill-special skill-cell">
-			<label class="rollable" data-roll="d20-{{system.hunger.value}}-{{system.dehydration.value}}-{{system.exhaustion.value}}-{{system.lvl_radiation.value}}+{{system.intimidation.value}}+@abilities.str.mod">STR</label> / 
-			<label class="rollable" data-roll="d20-{{system.hunger.value}}-{{system.dehydration.value}}-{{system.exhaustion.value}}-{{system.lvl_radiation.value}}+{{system.intimidation.value}}+@abilities.cha.mod">CHA</label>
+			<label class="rollable" data-roll="d20-{{system.penalties.value}}+{{system.intimidation.value}}+@abilities.str.mod">STR</label> / 
+			<label class="rollable" data-roll="d20-{{system.penalties.value}}+{{system.intimidation.value}}+@abilities.cha.mod">CHA</label>
 			</td>
 			<td class="skill-cell skill-label">Intimidation</td>
 			<td class="skill-cell skill-value"><input type="number"  name="system.intimidation.value" value="{{system.intimidation.value}}" /></td>
@@ -61,8 +61,8 @@
 
 		<tr class="skill-row">
 			<td class="skill-special skill-cell">
-			<label class="rollable" data-roll="d20-{{system.hunger.value}}-{{system.dehydration.value}}-{{system.exhaustion.value}}-{{system.lvl_radiation.value}}+{{system.medicine.value}}+@abilities.per.mod">PER</label> / 
-			<label class="rollable" data-roll="d20-{{system.hunger.value}}-{{system.dehydration.value}}-{{system.exhaustion.value}}-{{system.lvl_radiation.value}}+{{system.medicine.value}}+@abilities.int.mod">INT</label>
+			<label class="rollable" data-roll="d20-{{system.penalties.value}}+{{system.medicine.value}}+@abilities.per.mod">PER</label> / 
+			<label class="rollable" data-roll="d20-{{system.penalties.value}}+{{system.medicine.value}}+@abilities.int.mod">INT</label>
 			</td>
 			<td class="skill-cell skill-label">Medicine</td>
 			<td class="skill-cell skill-value"><input type="number"  name="system.medicine.value" value="{{system.medicine.value}}" /></td>
@@ -70,7 +70,7 @@
 		
 		<tr class="skill-row">
 			<td class="skill-special skill-cell">
-			<label class="rollable" data-roll="d20-{{system.hunger.value}}-{{system.dehydration.value}}-{{system.exhaustion.value}}-{{system.lvl_radiation.value}}+{{system.melee_weapons.value}}+@abilities.str.mod">STR</label>
+			<label class="rollable" data-roll="d20-{{system.penalties.value}}+{{system.melee_weapons.value}}+@abilities.str.mod">STR</label>
 			</td>
 			<td class="skill-cell skill-label">Melee Weapons</td>
 			<td class="skill-cell skill-value"><input type="number"  name="system.melee_weapons.value" value="{{system.melee_weapons.value}}" /></td>
@@ -79,7 +79,7 @@
 		
 		<tr class="skill-row">
 			<td class="skill-special skill-cell">
-			<label class="rollable" data-roll="d20-{{system.hunger.value}}-{{system.dehydration.value}}-{{system.exhaustion.value}}-{{system.lvl_radiation.value}}+{{system.science.value}}+@abilities.int.mod">INT</label>
+			<label class="rollable" data-roll="d20-{{system.penalties.value}}+{{system.science.value}}+@abilities.int.mod">INT</label>
 			</td>
 			<td class="skill-cell skill-label">Science</td>
 			<td class="skill-cell skill-value"><input type="number"  name="system.science.value" value="{{system.science.value}}" /></td>
@@ -88,7 +88,7 @@
 		
 		<tr class="skill-row">
 			<td class="skill-special skill-cell">
-			<label class="rollable" data-roll="d20-{{system.hunger.value}}-{{system.dehydration.value}}-{{system.exhaustion.value}}-{{system.lvl_radiation.value}}+{{system.sneak.value}}+@abilities.agi.mod">AGI</label>
+			<label class="rollable" data-roll="d20-{{system.penalties.value}}+{{system.sneak.value}}+@abilities.agi.mod">AGI</label>
 			</td>
 			<td class="skill-cell skill-label">Sneak</td>
 			<td class="skill-cell skill-value"><input type="number"  name="system.sneak.value" value="{{system.sneak.value}}" /></td>
@@ -97,7 +97,8 @@
 		
 		<tr class="skill-row">
 			<td class="skill-special skill-cell">
-			<label class="rollable" data-roll="d20-{{system.hunger.value}}-{{system.dehydration.value}}-{{system.exhaustion.value}}-{{system.lvl_radiation.value}}+{{system.speech.value}}+@abilities.cha.mod">CHA</label>
+			<label class="rollable" data-roll="d20-{{system.penalties.value}}+{{system.speech.value}}+@abilities.cha.mod">CHA</label>
+			</td>
 			</td>
 			<td class="skill-cell skill-label">Speech</td>
 			<td class="skill-cell skill-value"><input type="number"  name="system.speech.value" value="{{system.speech.value}}" /></td>
@@ -106,7 +107,7 @@
 		
 		<tr class="skill-row">
 			<td class="skill-special skill-cell">
-			<label class="rollable" data-roll="d20-{{system.hunger.value}}-{{system.dehydration.value}}-{{system.exhaustion.value}}-{{system.lvl_radiation.value}}+{{system.survival.value}}+@abilities.end.mod">END</label>
+			<label class="rollable" data-roll="d20-{{system.penalties.value}}+{{system.survival.value}}+@abilities.end.mod">END</label>
 			</td>
 			<td class="skill-cell skill-label">Survival</td>
 			<td class="skill-cell skill-value"><input type="number"  name="system.survival.value" value="{{system.survival.value}}" /></td>
@@ -115,7 +116,7 @@
 		
 		<tr class="skill-row">
 			<td class="skill-special skill-cell">
-			<label class="rollable" data-roll="d20-{{system.hunger.value}}-{{system.dehydration.value}}-{{system.exhaustion.value}}-{{system.lvl_radiation.value}}+{{system.unarmed.value}}+@abilities.str.mod">STR</label>
+			<label class="rollable" data-roll="d20-{{system.penalties.value}}+{{system.unarmed.value}}+@abilities.str.mod">STR</label>
 			</td>
 			<td class="skill-cell skill-label">Unarmed</td>
 			<td class="skill-cell skill-value"><input type="number"  name="system.unarmed.value" value="{{system.unarmed.value}}" /></td>
@@ -140,4 +141,27 @@
 			<td  class="status-info-value"><input type="number" name="system.lvl_radiation.value" value="{{system.lvl_radiation.value}}" min=0/></td>
 		</tr>
 	</table>
-</td></tr></table>
+	<table>
+		<tr>
+			<td>Healing Rate</td>
+			<td>Combat Sequence</td>
+			<td>Fatigue</td>
+		</tr>
+		<tr>
+			<td><input type="text" name="system.healing-rate.value" value="{{system.healing-rate.value}}"></td>
+			<td><input type="text" name="system.combat-sequence.value" value="{{system.healing-rate.value}}"></td>
+			<td><input type="text" name="system.fatigue.value" value="{{system.fatigue.value}}"></td>
+		</tr>
+		<tr>
+			<td>Passive Sense</td>
+			<td>Party Nerve</td>
+			<td>Group Sneak</td>
+		</tr>
+		<tr>
+			<td><input type="text" name="system.passive-sense.value" value="{{system.passive-sense.value}}"></td>
+			<td><input type="text" name="system.party-nerve.value" value="{{system.party-nerver.value}}"></td>
+			<td><input type="text" name="system.group-sneak.value" value="{{system.group-sneak.value}}"></td>
+		</tr>		
+	</table>
+</td></tr>
+</table>
